# alfalfa

./: .coverage  .coveragerc  .dockerignore  .env  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.js  .prettierrc.json  .travis.yml  AUTHORS.md  CHANGELOG.md  LICENSE.md  README.md  docker-compose-cory.yml  docker-compose-historian.yml  docker-compose-prod.yml  docker-compose.dev.yml  docker-compose.elk.yml  docker-compose.historian.yml  docker-compose.yml  goaws-deployment.yaml  goaws-service.yaml  http_requests  log_http_writing.txt  mc-deployment.yaml  minio-deployment.yaml  minio-service.yaml  mongo-deployment.yaml  mongo-service.yaml  package-lock.json  package.json  pyproject.toml  redis-deployment.yaml  redis-service.yaml  requirements.txt  setup.cfg  setup.py  simple.yml  (+5 more)
.github/workflows/: ci.yml  parse_version.py  publish_to_docker.sh  tag_push_docker.sh
alfalfa_web/: .babelrc  .babelrc.js  .browserslistrc  .dockerignore  .gitignore  Dockerfile  README.md  api.yml  app.js  components.yml  docs.hbs  generate-docs.js  index.html  package-lock.json  package.json  postcss.config.js  webpack.config.js
alfalfa_web/components/: app.js  variables.scss
alfalfa_web/scripts/: post_sign.js
alfalfa_web/server/: advancer.js  alfalfa-server.js  api-haystack.js  api-v2.js  api.js  dbops.js  index.js  resolvers.js  schema.js  utils.js
alfalfa_web/test/: economizer.js
alfalfa_worker/: .gitignore  Dockerfile  Dockerfile-test  README.md  __init__.py  __main__.py  add_site_logger.py  alembic.ini  dispatcher.py  energyplus_requirements.txt  model_advancer.py  model_advancer_base.py  model_logger.py  package-lock.json  requirements.txt  step_sim_utils.py  worker.py  worker_fmu.py  worker_job_base.py  worker_openstudio.py
alfalfa_worker/add_site/: add_site.py  add_site_logger.py  merge_osws.rb
alfalfa_worker/alembic/: env.py
alfalfa_worker/jobs/: step_run_base.py  step_run_process.py
alfalfa_worker/lib/: __init__.py  alfalfa_connections.py  alfalfa_connections_base.py  alfalfa_connections_manager.py  auto_name_enum.py  constants.py  enums.py  fmu_create_tags.py  http_requests.py  job.py  job_exception.py  logger_mixins.py  make_gzip_file.py  models.py  point.py  precheck_argus.py  redis_log_handler.py  run.py  run_manager.py  sim_type.py  tagutils.py  testcase.py  thermal_comfort.py  unit_conversions.py  upload_site_to_filestore.py  utils.py
alfalfa_worker/models/: sites.py
alfalfa_worker/requirements/: production.txt  py2-production.txt  py3-production.txt  requirements.txt  test.txt
alfalfa_worker/scripts/: start_worker.sh
alfalfa_worker/step_sim/: fmu_model_advancer.py  model_advancer.py  model_logger.py  osm_model_advancer.py  step_fmu.py  step_osm.py  step_sim_utils.py
alfalfa_worker/worker_fmu/: add_site.py  fmu_model_advancer.py  sim_fmu.py  step_fmu.py  worker.py
alfalfa_worker/worker_openstudio/: add_site.py  osm_model_advancer.py  sim_osm.py  step_osm.py  worker.py
client/: Dockerfile-client  Dockerfile-test  boptest.py  haystack_requests.py  requirements.txt  testcase.py
client/test/: CBI_EndtoEndTest_20190618_version2.osm  SmallOffice.osm  fmu-demo.py  latest_CBI_model.osm  osm-demo.py  test.py  test2.py
deploy/: README.md  Worker-Service-Scale-In-Policy.json  Worker-Service-Scale-Out-Policy.json  build_web.sh  deploy  k8s-historian.yml  k8s.yml  launchdata.txt  start_worker.sh  update-service-policy.json  web-launchdata.txt  web.json  worker.json
deploy/docker/: .env-internalstage  deploy-internalstage.sh  deploy-local.sh  docker-compose-noaws.yml
docker/: .env-internalstage  deploy-internalstage.sh  deploy-local.sh  docker-compose-noaws.yml  docker-compose-test.yml
docs/: AWS Deployment.md  Introduction.md  MediumOffice Example.md
elk/: filebeat.yml  metricbeat.yml
elk/kibana_objects/: kibana-dashboard-default.ndjson
examples/DOE_prototypes/: generate_many.ipynb
examples/PrimarySchool90_1_2016ASHRAE_169_2013_8A/: seed.osm
examples/primaryschool/: primaryschool.osm
examples/smalloffice/: smalloffice.osm
examples/with_ep2brick/: primaryschool.osm
grafana/: Dockerfile
grafana/dashboards/: Simple TS Dashboard.json
management/: update_boptest.py
notebooks/: intro.ipynb  testing.ipynb
resources/CoSim/: export_bcvtb_report_variables.cfg  haystack_report_haystack.json  haystack_report_mapping.json  in.idf
resources/CurlExamples/: read_one_point.sh
resources/OpenStudio/: Large Office - System 7.osm  LargeOfficeDC_HX_econ.osm  LargeOfficeDC_HX_econ2.osm  LargeOfficeDC_HX_econ2_bcvtb.osm  LargeOfficeDC_HX_econ2_halfoa.osm  LargeOfficeDC_HX_econ2_test.osm  LargeOfficeDC_HX_one_econ2_bcvtb.osm  eplusout.edd  eplusout.rdd
resources/haytack_tags/: boiler.txt  hotWaterPlant.txt  steamPlant.txt  tank.txt  zone.txt
test/: .test.py.swp  Dockerfile  test.py
tests/: README.md  conftest.py  travis_install.sh
tests/api/: __init__.py  conftest.py  test_model.py  test_point.py  test_run.py
tests/integration/: Dockerfile  conftest.py  docker-compose.yml  refrig-case-osw.py  start_test_server.sh  test-osw-error-handling.py  test.py  test_basic_operations.py  test_broken_models.py  test_fmu_single_zone_vav.py  test_modelica.py  test_refrig_case_osw.py  test_rtu_coodination_osw.py  test_schedule_override.py  test_simple_fmu_control.py  test_simple_thermostat_fmu.py  test_single_zone_vav_fmu.py  test_small_office_osm.py  test_small_office_osw.py  test_submit_file.py  (+1 more)
web/: .babelrc  Dockerfile  alfalfa-server.js  app.js  database.js  haystack_report_haystack.json  index.html  package-lock.json  package.json  postcss.config.js  resolvers.js  schema.js  server.js  webpack.config.js
worker/: .Dockerfile.swp  .pre-commit-config.yaml  Dockerfile  Dockerfile-test  README.md  SmOffPSZ.idf  __init__.py  add-site.js  addSite.py  events.json  master.py  messageHandler.py  message_handler.py  package.json  parsevariables.py  requirements.txt  runSimple.py  runSimulation.py  runSite.py  seed.osm  simulationManager.py  translate_osm.rb  variables.cfg  worker.py
workflow/: README.md
(+826 files in other folders)
