[tool.poetry]
name = "alfalfa"
version = "0.4.1"
description = "Alfalfa is a web service that converts building energy models in OpenStudio/EnergyPlus, Spawn of EnergyPlus, or Modelica to interactive virtual buildings."
authors = [
    'Kyle Benne <kyle.benne@nrel.gov>',
    'Anya Petersen <Anya.Petersen@nrel.gov>',
    'Nicholas Long <nicholas.long@nrel.gov>',
    'Tobias Shapinsky <tobias.shapinsky@nrel.gov>',
    'Alex Swindler <alex.swindler@nrel.gov>',
    'Tim Coleman <tim.coleman@nrel.gov>',
    'Cory Mosiman <cory.mosiman12@gmail.com>',
    'Brian Ball <brian.ball@nrel.gov>',
    'Willy Bernal <willy.bernalheredia@nrel.gov>',
]

[tool.poetry.dependencies]
python = ">=3.7.1, <3.11"

boto3 = "~1.24.79"
importlib-metadata = "4.11.4"
mlep = "0.1.1.dev3"
mongoengine = "^0.24.2"
pandas = "~1.3.5"
pymongo = "^4.2.0"
redis = "^4.2.2"
requests = "2.28.1"
scipy = "1.7.3"
symfit = "^0.5.5"

# chardet = "3.0.4"
# urllib3 = "1.26.11"

# These dependency versions are also defined
# in the alfalfa_worker Dockerfile and need
# to be updated if changed here.
Cython = "^0.29.28"
numpy = "1.21.6"

# needed for some dependencies -- ignoring for now
# setuptools = "65.3.0"
# urllib3 = "^1.26.12"

# These libraries are used for the data generator/testcase.
# They are pinned to older versions as the min python version is 3.7
# Lock to pillow 9.1.1 to avoid installation issues with Pillow 9.2 on Ubuntu
matplotlib = "3.5.2"
pillow = "9.3.0"

# The influxdb dependency will be removed once filebeat is configured
influxdb = "^5.3.1"


[tool.poetry.dev-dependencies]
# required for tests to pass right now. There are often issues when pinning to a branch
# and calling poetry update. I have had to completely remove my venv and reinstall in order
# to get the latest updates.
alfalfa-client = "^0.4.0"
autopep8 = "^1.4.4"
pre-commit = "^2.20.0"
pytest = "^6.2.5"
pycodestyle = "^2.5.0"
pytest-cov = "^3.0.0"
pytest-timeout = "1.4.2"
tox = "^3.21.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
