[tool.poetry]
name = "alfalfa"
version = "1.0.0"
description = "Alfalfa is a web service that converts building energy models in OpenStudio/EnergyPlus, Spawn of EnergyPlus, or Modelica to interactive virtual buildings."
authors = [
    'Kyle Benne <kyle.benne@nrel.gov>',
    'Anya Petersen <Anya.Petersen@nrel.gov>',
    'Nicholas Long <nicholas.long@nrel.gov>',
    'Tobias Shapinsky <tobias.shapinsky@nrel.gov>',
    'Alex Swindler <alex.swindler@nrel.gov>',
    'Tim Coleman <tim.coleman@nrel.gov>',
    'Cory Mosiman <cory.mosiman12@gmail.com>',
    'Brian Ball <brian.ball@nrel.gov>',
    'Willy Bernal <willy.bernalheredia@nrel.gov>',
]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11"

boto3 = "~1.26"
mongoengine = "~0.29"
pandas = "~2.2"
redis = "~4.5"

scipy = "~1.14"

# The influxdb dependency will be removed once filebeat is configured
influxdb = "^5.3.1"


[tool.poetry.group.dev.dependencies]
# required for tests to pass right now. There are often issues when pinning to a branch
# and calling poetry update. I have had to completely remove my venv and reinstall in order
# to get the latest updates.
alfalfa-client = "1.0.0"
# alfalfa-client = { git = "https://github.com/NREL/alfalfa-client.git", branch = "enhance_file_operations" }
autopep8 = "~2.0"
pre-commit = "~2.21"
pytest = "~7.2"
pycodestyle = "~2.10"
pytest-cov = "~4.0"
pytest-timeout = "~2.1"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
